2009-09-10  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Ariya Hidayat.

        Fix context menu event delivery with QWebGraphicsItem.

        Re-implement the correct context menu virtual function using
        a QGraphicsSceneContextMenuEvent and forward & handle it in
        QWebPage.

        * Api/qwebgraphicsitem.cpp:
        (QWebGraphicsItem::contextMenuEvent):
        * Api/qwebgraphicsitem.h:
        * Api/qwebpage.cpp:
        (QWebPagePrivate::contextMenuEvent):
        (QWebPage::event):
        * Api/qwebpage_p.h:

2009-09-10  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Unreviewed.

        Build fix for QtWebKit for Mac after r48219.

        qevent and qstyleoption are QtGui interfaces.

        * Api/qwebgraphicsitem.cpp:
        * Api/qwebgraphicsitem.h:

2009-09-09  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Tor Arne Vestbø.

        Call the right base class function QGraphicsWidget::event() instead
        of skipping it and using QObject::event() instead.

        * Api/qwebgraphicsitem.cpp:
        (QWebGraphicsItem::event):

2009-09-09  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Unreviewed.

        Fix comment at Tor Arne Vestbø's request.

        * Api/qwebgraphicsitem.cpp:
        (QWebGraphicsItem::sceneEvent):
        (QWebGraphicsItem::event):

2009-09-09  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Tor Arne Vestbø.

        Implement some virtual event methods so that we can fix
        event-related bugs in Qt patch releases.

        * Api/qwebgraphicsitem.cpp:
        (QWebGraphicsItem::sceneEvent):
        (QWebGraphicsItem::event):
        * Api/qwebgraphicsitem.h:

2009-09-09  Kenneth Rohde Christiansen  <kenneth@webkit.org>, Antonio Gomes  <antonio.gomes@openbossa.org>

        Reviewed by Simon Hausmann.

        Add a new QGraphicsWidget based version of the "QWebView"
        under the name "QWebGraphicsItem".
